--- a/packages.config
+++ b/packages.config
@@ -1,10 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net481" />
-  <package id="Markdig" version="0.37.0" targetFramework="net481" />
-  <package id="Microsoft.Web.WebView2" version="1.0.2646-prerelease" targetFramework="net481" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net481" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
+  <package id="FCTB" version="2.16.24" targetFramework="net481" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2045.28" targetFramework="net46" />
 </packages>
