重命名多个文件，使命名更规范

--- a/537 Code Factory.vbproj
+++ b/537 Code Factory.vbproj
@@ -128,23 +128,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
-    <Compile Include="Control1.Designer.vb">
-      <DependentUpon>Control1.vb</DependentUpon>
+    <Compile Include="editor.Designer.vb">
+      <DependentUpon>editor.vb</DependentUpon>
     </Compile>
-    <Compile Include="Control1.vb">
+    <Compile Include="editor.vb">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Form1.vb">
+    <Compile Include="home.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="home.Designer.vb">
+      <DependentUpon>home.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ieform.Designer.vb">
-      <DependentUpon>ieform.vb</DependentUpon>
+    <Compile Include="ie.Designer.vb">
+      <DependentUpon>ie.vb</DependentUpon>
     </Compile>
-    <Compile Include="ieform.vb">
+    <Compile Include="ie.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -165,14 +165,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Control1.resx">
-      <DependentUpon>Control1.vb</DependentUpon>
+    <EmbeddedResource Include="editor.resx">
+      <DependentUpon>editor.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="home.resx">
+      <DependentUpon>home.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ieform.resx">
-      <DependentUpon>ieform.vb</DependentUpon>
+    <EmbeddedResource Include="ie.resx">
+      <DependentUpon>ie.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
